--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,337 @@
-/* CSS here :) */
+@import url('reset.css');
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    --main-dark: #3a3633;
+    --main-light: white;
+    font-family: 'Poppins', sans serif;
+}
+
+/* ---------- NAV BAR ---------- */
+
+.nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 20px;
+    background-color: var(--main-dark);
+    z-index: 10;
+}
+
+.nav img {
+    height: 50px;
+}
+
+.nav img:hover {
+    transition: ease all 500ms;
+    opacity: 0.5;
+}
+
+.nav a {
+    color: var(--main-light);
+    text-decoration: none;
+    padding: 0 50px;
+}
+
+.nav li:hover {
+    border-bottom: 5px solid var(--main-light);
+}
+
+.menu-items {
+    display: flex;
+    align-items: center;
+}
+
+/* ---------- HERO ---------- */
+
+.hero-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    height: 100vh;
+    background-image: url('../imgs/bg.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.hero-content {
+    display: flex;
+    align-items: center;
+    width: 80%;
+    border: 10px solid var(--main-light);
+    color: var(--main-light);
+}
+
+h1 {
+    font-size: 4em;
+    padding: 0 20px;
+    line-height: 1.5;
+}
+
+.hero-sub-heading {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgba(0,0,0,0.5);
+    padding: 40px 20px;
+}
+
+.hero-sub-heading h2 {
+    font-size: 2em;
+    width: 100%;
+    line-height: 1.5;
+    padding-bottom: 40px;
+    border-bottom: 1px dashed var(--main-light);
+}
+
+.hero-sub-heading p {
+    width: 50%;
+    padding: 40px 10px 0;
+    line-height: 1.5;
+}
+
+/* ---------- FEATURES ---------- */
+
+.features-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 50px 0;
+}
+
+.features {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 300px;
+    margin: 15px;
+    text-align: center;
+    box-shadow: 1px 1px 5px lightgrey;
+}
+
+.features:hover {
+    box-shadow: 2px 2px 10px lightgrey;
+}
+
+.features img {
+    margin-top: 20px;
+    height: 40px;
+}
+
+.features h3 {
+    font-weight: 600;
+    margin: 20px 0;
+}
+
+.features p {
+    flex-grow: 1;
+    padding: 20px;
+    font-size: 0.8em;
+    line-height: 1.5;
+}
+
+.features button {
+    background-color: var(--main-dark);
+    border: none;
+    padding: 10px 0;
+    margin: 0 20px 20px;
+    color: var(--main-light);
+    cursor: pointer;
+}
+
+/* ---------- DARK SECTION ---------- */
+
+.dark-section {
+    background-color: var(--main-dark);
+    height: 400px;
+    padding: 75px;
+    color: var(--main-light);
+}
+
+.dark-section h2 {
+    font-size: 4em;
+    margin-bottom: 40px;
+}
+
+.dark-section p {
+    line-height: 1.5;
+    font-size: 1.2em;
+}
+
+/* ---------- COOL HOVER ---------- */
+
+.cool-hover {
+    background-color: var(--main-dark);
+    position: relative;
+    float: left;
+    top: -60px;
+    left: 50px;
+    height: 120px;
+    width: 220px;
+    z-index: 2;
+    border: 5px solid var(--main-light);
+    text-align: center;
+}
+
+.cool-hover h4 {
+    color: red;
+    margin: 20px 0 15px;
+}
+
+.cool-hover p {
+    color: var(--main-light);
+    font-size: 0.7em;
+    line-height: 1.7;
+}
+
+/* ---------- GRADIENT SECTION ---------- */
+
+.gradient-section {
+    position: relative;
+    background-image: linear-gradient(to right, var(--main-light), dodgerblue);
+    height: 400px;
+    padding: 75px;
+    color: var(--main-light);
+    text-align: right;
+}
+
+.gradient-section h2 {
+    font-size: 4em;
+    margin-bottom: 40px;
+}
+
+.gradient-section p {
+    line-height: 1.5;
+    font-size: 1.2em;
+}
+
+/* ---------- GALLERY SECTION ---------- */
+
+.gallery-container {
+    position: relative;
+    top: 0;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: var(--main-dark);
+}
+
+.gallery-item {
+    width: 33.33%;
+    height: 250px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.gallery-item img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.gallery-item:hover > img {
+    transition: all ease 0.5s;
+    width: 110%;
+    height: 110%;
+    opacity: 0.6;
+}
+
+.gallery-item-text {
+    position: absolute;
+    display: none;
+    color: white;
+    font-size: 1.25em;
+    padding: 20px;
+}
+
+.gallery-item:hover > .gallery-item-text {
+    display: block;
+    z-index: 1;
+}
+
+/* ---------- MAILING LIST ---------- */
+
+.mailing-list-container {
+    display: flex;
+    justify-content: center;
+}
+
+.mailing-list-form {
+    width: 240px;
+    padding: 40px 0;
+    color: lightslategrey;
+}
+
+.mailing-list-form label {
+    display: block;
+    padding: 10px 0;
+    font-size: 0.8em;
+}
+
+.email-submit-container {
+    display: flex;
+    border: 2px solid lightslategrey;
+    border-radius: 5px;
+}
+
+.email-submit-container:hover {
+    transition: all ease 0.5s;
+    border: 2px solid var(--main-dark);
+}
+
+.email-submit-container:hover > button {
+    transition: all ease 0.5s;
+    background-color: var(--main-dark);
+}
+
+.email-input {
+    height: 30px;
+    width: 200px;
+    padding: 0 10px;
+    border: none;
+    border-radius: 5px;
+}
+
+.email-input:focus {
+    outline: none;
+}
+
+.mailing-list-form button {
+    display: block;
+    height: 30px;
+    width: 40px;
+    background-color: lightslategrey;
+    border: none;
+}
+
+.mailing-list-form button:hover {
+    cursor: pointer;
+}
+
+/* ---------- FOOTER ---------- */
+
+.footer {
+    display: flex;
+    justify-content: space-around;
+    padding: 50px 0;
+    border-top: 2px solid lightgrey;
+}
+
+.footer a {
+    text-decoration: none;
+    color: lightslategrey;
+    line-height: 3;
+}
+
+.footer a:hover {
+    transition: all ease 0.2s;
+    text-decoration: underline;
+    color: var(--main-dark);
+}
